style (form): fix horizontal scrolling on smartphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,7 @@ strong {
 }
 
 .field-wrapper input {
+  width: 100%;
   border: none;
 
   font-weight: 700;
